Add background to home page

--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CC Global Fashion Summit</title>
-  <link rel="stylesheet" href="home-style.css">
+  <link rel="stylesheet" href="stylesheets/home-style.css">
   <script src="https://kit.fontawesome.com/eb94992e2c.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -19,7 +19,7 @@
       <nav class="page-navigation">
         <span class="hamburger color-2 mobile-only"><img src="images/hamburger.png" alt="Hamburger"></span>
         <div class="desktop-nav desktop-only">
-          <span><a class="logo" href="./home.html"><img src="images/CC-logo.svg" alt="Logo"></a></span>
+          <span><a class="logo" href="home.html"><img src="images/CC-logo.svg" alt="Logo"></a></span>
           <ul class="desktop-nav-items color-2 font-2">
             <li>
               <a href="pages/about.html">About</a>
@@ -33,7 +33,7 @@
         </div>
       </nav>
       <section class="header-content">
-        <p class="font-2 color-1 greeting">"Hello Fashion World!"</p>
+        <p class="font-2 color-1 greeting">"Let's Talk Fashion Without Borders"</p>
         <h1 class="font-1 hero color-1">CULTURE CUSTODIAN<br>GLOBAL FASHION SUMMIT<br>2022</h1>
         <p class="title font-2 color-2">
           The joyful event that explores the possibilities and impact of tech in the fashion industry, with guests from all over
