Fix linter errors

--- a/home.html
+++ b/home.html
@@ -127,7 +127,7 @@
       <div class="red-line"></div>
       <div class="speaker-list">
       </div>
-      <button type="button" class="color-2 font-2 see-more">
+      <button type="button" class="color-2 font-2 see-more mobile-only">
         SEE MORE  <i class="fa-solid fa-angle-down color-1"></i>
       </button>
     </section>
