--- a/pages/about.html
+++ b/pages/about.html
@@ -68,7 +68,7 @@
           <i class="fa-solid fa-angle-right color-1"></i>
         </li>
         <li>
-          <a href="#" class="color-2">Events</a>
+          <a href="#events" class="color-2">Events</a>
         </li>
         <li>
           <i class="fa-solid fa-angle-right color-1"></i>
@@ -106,7 +106,7 @@
         <img src="../images/cc-about-img.svg" alt="CC logo">
       </span>
     </section>
-    <section class="past-events">
+    <section id="events" class="past-events">
       <h3 class="font-2 color-2 sub-header">
         Past Culture Custodian Global Events
       </h3>
