Fix linter error

--- a/home.html
+++ b/home.html
@@ -113,7 +113,7 @@
           <span class="program-img"><img src="images/icons/network-icon.png" alt="Network"></span>
           <h3 class="font-2 color-1">CC Network</h3>
           <p class="font-2 color-3">
-            Get the opportunity to network with tech &amp fashion founders and enthusiasts from around the world.
+            Get the opportunity to network with tech & fashion founders and enthusiasts from around the world.
           </p>
         </div>
       </div>
