Rename file for page build

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <span class="ham-container color-2 mobile-only"><img class="hamburger" src="images/hamburger.png" alt="Hamburger"></span>
         <div class="desktop-nav desktop-only">
           <span id="cc-Logo">
-            <a class="logo" href="home.html">
+            <a class="logo" href="index.html">
               <img src="images/CC-logo.svg" alt="Logo">
             </a>
           </span>
