--- a/pages/about.html
+++ b/pages/about.html
@@ -26,7 +26,7 @@
           </a>
           <ul class="overlay-content font-2">
             <li class="page-link">
-              <a href="../home.html">Home</a>
+              <a href="../index.html">Home</a>
             </li>
             <li class="page-link">
               <a href="javascript:void(0)">Sponsor</a>
@@ -45,7 +45,7 @@
         <!-- end of mobile navigation overlay -->
         <span class="hamburger color-2 mobile-only"><img src="../images/hamburger.png" alt="Hamburger"></span>
         <div class="desktop-nav desktop-only">
-          <span><a class="logo" href="../home.html"><img src="../images/CC-logo.svg" alt="Logo"></a></span>
+          <span><a class="logo" href="../index.html"><img src="../images/CC-logo.svg" alt="Logo"></a></span>
           <ul class="desktop-nav-items color-2 font-2">
             <li>
               <a href="about.html">About</a>
@@ -60,7 +60,7 @@
       </nav>
       <ul class="small-icons desktop-only">
         <li>
-          <a href="../home.html">
+          <a href="../index.html">
             <i class="fa-solid fa-house color-2"></i>
           </a>
         </li>
