Fix style errors

--- a/pages/about.html
+++ b/pages/about.html
@@ -115,14 +115,14 @@
         Take a look at the last two CC Summits that took place in Nairobi and Accra
       </p>
       <div class="previous-events">
-        <span class="e-2019 event">
+        <div class="e-2019 event">
           <h4 class=" font-2">2019</h4>
           <p class=" font-2">Culture Custodian Global Summit in Nairobi, Kenya</p>
-        </span>
-        <span class="e-2021 event">
+        </div>
+        <div class="e-2021 event">
           <h4 class="font-2">2021</h4>
           <p class="font-2">Culture Custodian Global Summit in Accra, Ghana</p>
-        </span>
+        </div>
       </div>
     </section>
     <section class="partners mobile-only">
