make icons accessible to screen reader

--- a/index.html
+++ b/index.html
@@ -14,15 +14,22 @@
   <div class="wrapper">
     <header>
       <nav class="top-nav desktop-only">
-        <i class="fa-brands fa-facebook-f"></i>
-        <i class="fa-brands fa-twitter"></i>
+        <a href="" target="_blank">
+          <i class="fa-brands fa-facebook-f" aria-hidden="true"></i>
+          <span class="sr-only">Facebook</span>
+        </a>
+        <a href="" target="_blank">
+          <i class="fa-brands fa-twitter" aria-hidden="true"></i>
+          <span class="sr-only">Twitter</span>
+        </a>
         <span class="color-3 font-2">English</span><span class="color-3 font-2">My Page</span><span class="color-3 font-2">Logout</span>
       </nav>
       <nav class="page-navigation">
         <!-- mobile menu navigation overlay -->
         <div id="mobile-menu-navigation" class="overlay mobile-only">
           <a href="javascript:void(0)" class="close-btn">
-            <i class="fa-solid fa-xmark"></i>
+            <i class="fa-solid fa-xmark" aria-hidden="true"></i>
+            <span class="sr-only">Close Button</span>
           </a>
           <ul class="overlay-content font-2">
             <li class="page-link">
