--- a/pages/about.html
+++ b/pages/about.html
@@ -13,8 +13,14 @@
   <div class="wrapper">
     <header>
       <nav class="top-nav desktop-only">
-        <i class="fa-brands fa-facebook-f"></i>
-        <i class="fa-brands fa-twitter"></i>
+        <a href="" target="_blank">
+          <i class="fa-brands fa-facebook-f" aria-hidden="true"></i>
+          <span class="sr-only">Facebook</span>
+        </a>
+        <a href="" target="_blank">
+          <i class="fa-brands fa-twitter" aria-hidden="true"></i>
+          <span class="sr-only">Twitter</span>
+        </a>
         <span class="color-3 font-2">English</span><span class="color-3 font-2">My Page</span><span
         class="color-3 font-2">Logout</span>
       </nav>
@@ -22,7 +28,8 @@
         <!-- mobile menu navigation overlay -->
         <div id="mobile-menu-navigation" class="overlay mobile-only">
           <a href="javascript:void(0)" class="close-btn">
-            <i class="fa-solid fa-xmark"></i>
+            <i class="fa-solid fa-xmark" aria-hidden="true"></i>
+            <span class="sr-only">Close Button</span>
           </a>
           <ul class="overlay-content font-2">
             <li class="page-link">
@@ -61,17 +68,18 @@
       <ul class="small-icons desktop-only">
         <li>
           <a href="../index.html">
-            <i class="fa-solid fa-house color-2"></i>
+            <i class="fa-solid fa-house color-2" aria-hidden="true"></i>
+            <span class="sr-only">Home page button</span>
           </a>
         </li>
         <li class="color-1">
-          <i class="fa-solid fa-angle-right color-1"></i>
+          <i class="fa-solid fa-angle-right color-1" aria-hidden="true"></i>
         </li>
         <li>
           <a href="#events" class="color-2">Events</a>
         </li>
         <li>
-          <i class="fa-solid fa-angle-right color-1"></i>
+          <i class="fa-solid fa-angle-right color-1" aria-hidden="true"></i>
         </li>
         <li>
           <a href="#" class="color-2">CC Global Summit</a>
